src/treesub_compile.log
treesub_parra.c: In function 'DistanceMatK80':
treesub_parra.c:116:34: error: 'com' undeclared (first use in this function); did you mean 'cos'?
  116 |     distances = (double**)malloc(com.ns * sizeof(double*));
      |                                  ^~~
      |                                  cos
treesub_parra.c:116:34: note: each undeclared identifier is reported only once for each function it appears in
treesub_parra.c:138:13: error: implicit declaration of function 'CountChanges' [-Wimplicit-function-declaration]
  138 |             CountChanges(i, j, &P, &Q);
      |             ^~~~~~~~~~~~
treesub_parra.c:132:14: error: invalid controlling predicate
  132 |     for (i = 0; i < com.ns; i++) {
      |              ^
treesub_parra.c:149:14: error: invalid controlling predicate
  149 |     for (i = 0; i < com.ns; i++) {
      |              ^
treesub_parra.c: In function 'DistanceMatJC69':
treesub_parra.c:227:34: error: 'com' undeclared (first use in this function); did you mean 'cos'?
  227 |     distances = (double**)malloc(com.ns * sizeof(double*));
      |                                  ^~~
      |                                  cos
treesub_parra.c:240:14: error: invalid controlling predicate
  240 |     for (i = 0; i < com.ns; i++) {
      |              ^
treesub_parra.c: At top level:
treesub_parra.c:292:5: error: conflicting types for 'BootstrapSeq'; have 'int(char *, int)'
  292 | int BootstrapSeq(char bootseqf[], int nboot)
      |     ^~~~~~~~~~~~
In file included from treesub_parra.c:9:
paml.h:181:5: note: previous declaration of 'BootstrapSeq' with type 'int(char *)'
  181 | int BootstrapSeq (char* seqfilename);
      |     ^~~~~~~~~~~~
treesub_parra.c: In function 'BootstrapSeq':
treesub_parra.c:296:35: error: 'com' undeclared (first use in this function); did you mean 'cos'?
  296 |     int *bootindex = (int*)malloc(com.ls * sizeof(int));
      |                                   ^~~
      |                                   cos
treesub_parra.c:323:18: error: invalid controlling predicate
  323 |         for (j = 0; j < com.ns; j++) {
      |                  ^
treesub_parra.c: In function 'EigenQREV':
treesub_parra.c:351:13: error: 'com' undeclared (first use in this function); did you mean 'cos'?
  351 |     int n = com.ncode;
      |             ^~~
      |             cos
treesub_parra.c: In function 'ConditionalPNode':
treesub_parra.c:395:20: error: 'nodes' undeclared (first use in this function)
  395 |     double *conP = nodes[inode].conP;
      |                    ^~~~~
treesub_parra.c:404:9: error: implicit declaration of function 'GetPMatBranch'; did you mean 'SetBranch'? [-Wimplicit-function-declaration]
  404 |         GetPMatBranch(nodes[son].pkappa, x, t, son);
      |         ^~~~~~~~~~~~~
      |         SetBranch
treesub_parra.c:411:21: error: 'com' undeclared (first use in this function); did you mean 'cos'?
  411 |     for (h = 0; h < com.npatt; h++) {
      |                     ^~~
      |                     cos
treesub_parra.c:411:14: error: invalid controlling predicate
  411 |     for (h = 0; h < com.npatt; h++) {
      |              ^
treesub_parra.c: In function 'CountChanges':
treesub_parra.c:552:21: error: 'com' undeclared (first use in this function); did you mean 'cos'?
  552 |     for (k = 0; k < com.ls; k++) {
      |                     ^~~
      |                     cos
